apps/test-mc/resources/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-mc-netpol
  namespace: test-mc
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minecraft
      app.kubernetes.io/instance: test-mc-minecraft
  ingress:
    - ports:
        - port: rcon
          protocol: TCP
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: test-mc-rcon
              app.kubernetes.io/name: rcon-web-admin
