apps/test-mc/resources/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: mc-allow-router
spec:
  endpointSelector:
    matchLabels:
      allow-mc-router: "true"
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
              protocol: ANY
      fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": test-mc
            "k8s:name": mc-router
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mc-allow-router-world
  namespace: test-mc
spec:
  endpointSelector:
    matchLabels:
      "k8s:name": mc-router
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
      fromEntities:
        - world
